--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,13 @@ html, body {
   margin: 0;
 }
 
+body {
+  overflow: hidden;
+  height: 100%;
+  position: fixed;
+  width: 100%;
+}
+
 *,
 *::before,
 *::after {
