--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,7 @@ html {
 
 html, body {
   margin: 0;
-}
-
-body {
-  overflow: hidden;
   height: 100%;
-  position: fixed;
   width: 100%;
 }
 
@@ -21,8 +16,8 @@ body {
 
 .container {
   position: relative;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   overflow: hidden;
 }
 
